; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_mp_pcb.c_mp_pcbdetach.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_mp_pcb.c_mp_pcbdetach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.mppcb = type { i32 }

@MPPCB_STATE_DEAD = common dso_local global i32 0, align 4
@SOF_PCBCLEARING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_pcbdetach(%struct.socket* %0) #0 {
  %2 = alloca %struct.socket*, align 8
  %3 = alloca %struct.mppcb*, align 8
  store %struct.socket* %0, %struct.socket** %2, align 8
  %4 = load %struct.socket*, %struct.socket** %2, align 8
  %5 = call %struct.mppcb* @mpsotomppcb(%struct.socket* %4)
  store %struct.mppcb* %5, %struct.mppcb** %3, align 8
  %6 = load i32, i32* @MPPCB_STATE_DEAD, align 4
  %7 = load %struct.mppcb*, %struct.mppcb** %3, align 8
  %8 = getelementptr inbounds %struct.mppcb, %struct.mppcb* %7, i32 0, i32 0
  store i32 %6, i32* %8, align 4
  %9 = load %struct.socket*, %struct.socket** %2, align 8
  %10 = getelementptr inbounds %struct.socket, %struct.socket* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @SOF_PCBCLEARING, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %21, label %15

15:                                               ; preds = %1
  %16 = load i32, i32* @SOF_PCBCLEARING, align 4
  %17 = load %struct.socket*, %struct.socket** %2, align 8
  %18 = getelementptr inbounds %struct.socket, %struct.socket* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = or i32 %19, %16
  store i32 %20, i32* %18, align 4
  br label %21

21:                                               ; preds = %15, %1
  %22 = call i32 (...) @mp_gc_sched()
  ret void
}

declare dso_local %struct.mppcb* @mpsotomppcb(%struct.socket*) #1

declare dso_local i32 @mp_gc_sched(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
